--- a/main.org
+++ b/main.org
@@ -757,15 +757,22 @@ For backward word and forwardword
   )
 
 
-(use-package lsp-python-ms
+;; (use-package lsp-python-ms
+;;   :ensure t
+;;   :init (setq lsp-python-ms-auto-install-server t)
+;;   :hook (python-mode . (lambda ()
+;;                           (require 'lsp-python-ms)
+;;                           (setq-local ms-python-python-lint-enabled nil)
+;;                           (lsp)
+;;         ))
+;;   )  ; or lsp-deferred
+
+
+(use-package lsp-pyright
   :ensure t
-  :init (setq lsp-python-ms-auto-install-server t)
   :hook (python-mode . (lambda ()
-                          (require 'lsp-python-ms)
-                          (setq-local ms-python-python-lint-enabled nil)
-                          (lsp)
-        ))
-  )  ; or lsp-deferred
+                          (require 'lsp-pyright)
+                          (lsp))))  ; or lsp-deferred
 
 (use-package lsp-ui 
    :ensure t
