--- a/main.org
+++ b/main.org
@@ -1206,6 +1206,15 @@ alias em="emacsclient -c -a emacs"
 (add-to-list 'auto-mode-alist '("\\.ily$" . LilyPond-mode))
 (add-hook 'LilyPond-mode-hook (lambda () (turn-on-font-lock)))
 #+END_SRC
+
+
+* SLY
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package sly
+  :ensure t)
+#+END_SRC
+
+
 * Restore performance
 #+BEGIN_SRC emacs-lisp :results output silent
 ;; Make gc pauses faster by decreasing the threshold.
