Rebind google translate on r

--- a/main.org
+++ b/main.org
@@ -1282,10 +1282,10 @@ alias em="emacsclient -c -a emacs"
     :config
     ;; https://github.com/atykhonov/google-translate/issues/52#issuecomment-727920888
     (defun google-translate--search-tkk () "Search TKK." (list 430675 2721866130))
-    (define-key evil-normal-state-map (kbd "<SPC> l l") 'google-translate-at-point)
-    (define-key evil-normal-state-map (kbd "<SPC> l L") 'google-translate-at-point-reverse)
-    (define-key evil-normal-state-map (kbd "<SPC> L l") 'google-translate-query-translate)
-    (define-key evil-normal-state-map (kbd "<SPC> L L") 'google-translate-query-translate-reverse)
+    (define-key evil-normal-state-map (kbd "<SPC> r r") 'google-translate-at-point)
+    (define-key evil-normal-state-map (kbd "<SPC> r R") 'google-translate-at-point-reverse)
+    (define-key evil-normal-state-map (kbd "<SPC> r q") 'google-translate-query-translate)
+    (define-key evil-normal-state-map (kbd "<SPC> r Q") 'google-translate-query-translate-reverse)
     (setq google-translate-default-source-language "en")
     (setq google-translate-default-target-language "ru"))
 #+END_SRC
