--- a/main.org
+++ b/main.org
@@ -276,7 +276,8 @@ find them with C-x C-f (find-file) if I really need to.
   (define-key evil-normal-state-map (kbd "<SPC> 6") 'winum-select-window-6)
 
   (define-key evil-normal-state-map (kbd "<SPC> g") 'magit-status)
-  (define-key evil-normal-state-map (kbd "<SPC> a") 'org-agenda)
+  (define-key evil-normal-state-map (kbd "<SPC> a a") 'org-agenda)
+  (define-key evil-normal-state-map (kbd "<SPC> a c") 'org-capture)
 
   (define-key evil-normal-state-map (kbd "<SPC> c") 'compile)
 
@@ -925,11 +926,16 @@ company-backends
   ;  'org-babel-load-languages
   ;  '((translate . t))))
   (setq org-clock-sound "~/.emacs.d/alarm.wav")
+
+  (setq org-capture-templates
+         '(("t" "Tasks" entry (file+headline "~/org/agenda.org" "Tasks")
+  	  "* TODO %?\nSCHEDULED: %(org-insert-time-stamp (org-read-date nil t \"+1d\"))\n" )))
 )
- (require 'org-tempo)
- (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
- (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
- (add-to-list 'org-structure-template-alist '("py" . "src python"))
+
+(require 'org-tempo)
+(add-to-list 'org-structure-template-alist '("sh" . "src shell"))
+(add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+(add-to-list 'org-structure-template-alist '("py" . "src python"))
 #+END_SRC
 
 * Yas
