--- a/main.org
+++ b/main.org
@@ -176,26 +176,26 @@ find them with C-x C-f (find-file) if I really need to.
   ;;
   ;;  (load-theme 'modus-operandi t)           ; Light theme
 
-   (load-theme 'apropospriate-dark t)
-   (global-hl-line-mode t)
+   ;; (load-theme 'apropospriate-dark t)
+   ;; (global-hl-line-mode t)
 
 
 
 
   ;; My default theme
   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-  ;;   (scroll-bar-mode 0)
-  ;;   (fringe-mode 0)
-  ;;   
-  ;;   (set-face-attribute 'mode-line nil :box nil)
-  ;;   (set-face-attribute 'mode-line-inactive nil :box nil)
-  ;;   
-  ;;   (set-face-attribute 'mode-line nil :background "#c6edf9")
-  ;;   (set-face-attribute 'mode-line-inactive nil :background "#FAFAFA")
-  ;;   
-  ;;   (set-face-background 'vertical-border "gray")
-  ;;   (set-face-foreground 'vertical-border (face-background 'vertical-border))
-  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+    (scroll-bar-mode 0)
+    (fringe-mode 0)
+    
+    (set-face-attribute 'mode-line nil :box nil)
+    (set-face-attribute 'mode-line-inactive nil :box nil)
+    
+    (set-face-attribute 'mode-line nil :background "#c6edf9")
+    (set-face-attribute 'mode-line-inactive nil :background "#FAFAFA")
+    
+    (set-face-background 'vertical-border "gray")
+    (set-face-foreground 'vertical-border (face-background 'vertical-border))
+  
 
     ; (load-theme 'adwaita t)
     ; (load-theme 'gruvbox-dark-hard t)
@@ -299,6 +299,7 @@ find them with C-x C-f (find-file) if I really need to.
 
   ;; fast function
   (define-key evil-normal-state-map (kbd "<SPC> ~") 'dy-set-fast-function)
+  (define-key evil-visual-state-map (kbd "<SPC> ~") 'dy-set-fast-function)
 
   (defun dy-function-not-found ()
     "Function is not find"
@@ -1310,8 +1311,12 @@ alias em="emacsclient -c -a emacs"
     :config
     ;; https://github.com/atykhonov/google-translate/issues/52#issuecomment-727920888
     (defun google-translate--search-tkk () "Search TKK." (list 430675 2721866130))
-    (define-key evil-normal-state-map (kbd "<SPC> r r") 'google-translate-at-point)
-    (define-key evil-normal-state-map (kbd "<SPC> r R") 'google-translate-at-point-reverse)
+    (define-key evil-normal-state-map (kbd "<SPC> r r") 'dy-google-translate)
+    (define-key evil-normal-state-map (kbd "<SPC> r R") 'dy-google-translate-reverse)
+
+    (define-key evil-visual-state-map (kbd "<SPC> r r") 'dy-google-translate)
+    (define-key evil-visual-state-map (kbd "<SPC> r R") 'dy-google-translate-reverse)
+
     (define-key evil-normal-state-map (kbd "<SPC> r q") 'google-translate-query-translate)
     (define-key evil-normal-state-map (kbd "<SPC> r Q") 'google-translate-query-translate-reverse)
     (setq google-translate-default-source-language "en")
@@ -1629,4 +1634,32 @@ Do not try to make a new directory or anything fancy."
         (vc-rename-file file name)
       (rename-file file name))
     (set-visited-file-name name t t)))
+
+
+(defun dy-google-translate ()
+  (interactive)
+  (let* ((langs (google-translate-read-args nil nil))
+         (source-language (car langs))
+         (target-language (cadr langs))
+	 (p1 (region-beginning))
+	 (p2 (region-end)))
+    (if (use-region-p)
+    (google-translate-translate
+     source-language target-language
+     (buffer-substring-no-properties p1 p2))
+    (google-translate-at-point))))
+
+
+(defun dy-google-translate-reverse ()
+  (interactive)
+  (let* ((langs (google-translate-read-args nil nil))
+         (source-language (cadr langs))
+         (target-language (car langs))
+	 (p1 (region-beginning))
+	 (p2 (region-end)))
+    (if (use-region-p)
+    (google-translate-translate
+     source-language target-language
+     (buffer-substring-no-properties p1 p2))
+    (google-translate-at-point-reverse))))
 #+END_SRC
