--- a/main.org
+++ b/main.org
@@ -1605,6 +1605,27 @@ If in compilation buffer there are many lines it start to be a very slow
    (lambda()
      (define-key evil-normal-state-map (kbd "<SPC> =") 'clang-format-buffer)))
 #+END_SRC
+
+** Bidnings
+#+BEGIN_SRC emacs-lisp :results output silent
+
+(use-package ggtags
+  :ensure t
+  :config
+    (add-hook 'c-mode-common-hook
+            (lambda ()
+                (when (derived-mode-p 'c-mode 'c++-mode 'java-mode 'asm-mode)
+                (ggtags-mode 1)))))
+
+;; (define-key ggtags-mode-map (kbd "C-c g s") 'ggtags-find-other-symbol)
+;; (define-key ggtags-mode-map (kbd "C-c g h") 'ggtags-view-tag-history)
+;; (define-key ggtags-mode-map (kbd "C-c g r") 'ggtags-find-reference)
+;; (define-key ggtags-mode-map (kbd "C-c g f") 'ggtags-find-file)
+;; (define-key ggtags-mode-map (kbd "C-c g c") 'ggtags-create-tags)
+;; (define-key ggtags-mode-map (kbd "C-c g u") 'ggtags-update-tags)
+;; 
+;; (define-key ggtags-mode-map (kbd "M-,") 'pop-tag-mark)
+#+END_SRC
 * Dy
 #+BEGIN_SRC emacs-lisp :results output silent
 
