--- a/main.org
+++ b/main.org
@@ -249,6 +249,12 @@ find them with C-x C-f (find-file) if I really need to.
 (winner-mode t)
 #+END_SRC
 
+* String-inflection
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package string-inflection
+  :ensure t
+)
+#+END_SRC
 * Evil mode
 #+BEGIN_SRC emacs-lisp :results output silent
 
@@ -317,6 +323,12 @@ find them with C-x C-f (find-file) if I really need to.
   :ensure t
   :config
   (evil-collection-init))
+
+(use-package evil-string-inflection
+  :after evil
+  :ensure t
+)
+
 #+END_SRC
 
 * Ivy
